# gui_news_reader

./: .gitignore
headlines/: Cargo.toml
headlines/src/: headlines.rs  main.rs
newsapi/: Cargo.toml
newsapi/src/: lib.rs
