[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version ="2.7.0", features=["json"]}
serde = {version = "1.0.164", features =["derive"]}
serde_json = "1.0.66"
thiserror = "1.0.40"
url = "2.4.0"
reqwest = {version = "0.11.18", feature = ["json"], optional = true }

[features]
async = [
    "reqwest"
]